--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-
 ---
 
 <html lang="en">
@@ -8,9 +7,26 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Astro / WordPress</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>Astro / WordPress Integration Test</h1>
 	</body>
+
+	<script>
+		const posts = getPosts()
+
+		async function getPosts() {
+			const response = await fetch("https://public-api.wordpress.com/wp/v2/sites/neophyte.home.blog/posts")
+			
+			if (!response.ok) {
+				throw new Error(`HTTP error: ${response.status}`)
+			}
+
+			const data = await response.json()
+			return data
+		}
+
+		console.log(posts)
+	</script>
 </html>
