--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,20 +13,5 @@
 		<h1>Astro / WordPress Integration Test</h1>
 	</body>
 
-	<script>
-		const posts = getPosts()
-
-		async function getPosts() {
-			const response = await fetch("https://public-api.wordpress.com/wp/v2/sites/neophyte.home.blog/posts")
-			
-			if (!response.ok) {
-				throw new Error(`HTTP error: ${response.status}`)
-			}
-
-			const data = await response.json()
-			return data
-		}
-
-		console.log(posts)
-	</script>
+	<script type="module" src="/src/scripts/index.js"></script>
 </html>
