--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import PostsGallery from "../components/PostsGallery.astro"
 ---
 
 <html lang="en">
@@ -10,7 +11,8 @@
 		<title>Astro / WordPress</title>
 	</head>
 	<body>
-		<h1>Astro / WordPress Integration Test</h1>
+		<h1>Astro / WP Test</h1>
+		<PostsGallery />
 	</body>
 
 	<script type="module" src="/src/scripts/index.js"></script>
