index: importing script a different way

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,5 +15,5 @@ import PostsGallery from "../components/PostsGallery.astro"
 		<PostsGallery />
 	</body>
 
-	<script type="module" src="/src/scripts/index.js"></script>
+	<script>import "../scripts/index"</script>
 </html>
