tried to render post gallery, but getting raw HTML string

--- a/src/components/PostsGallery.astro
+++ b/src/components/PostsGallery.astro
@@ -1,5 +1,9 @@
 ---
+import { getPosts } from "../scripts/index"
+const posts = await getPosts()
 ---
+<h2>Posts Gallery</h2>
+
 <section>
-    <h2>Posts Gallery</h2>
+    {posts}
 </section>
