--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import PostsGallery from "../components/PostsGallery.astro"
+// import { posts } from "../scripts/index"
 ---
 
 <html lang="en">
@@ -12,8 +13,9 @@ import PostsGallery from "../components/PostsGallery.astro"
 	</head>
 	<body>
 		<h1>Astro / WP Test</h1>
+		<!-- <PostsGallery posts={posts} /> -->
 		<PostsGallery />
 	</body>
 
-	<script>import "../scripts/index"</script>
+	<!-- <script>import "../scripts/index"</script> -->
 </html>
