added the entities package. used it to strip the unicode from post data from the WP API so that regular text would render

--- a/src/components/PostsGallery.astro
+++ b/src/components/PostsGallery.astro
@@ -40,10 +40,12 @@ const posts = await getPosts()
     .thumb-details {
         position: absolute;
         bottom: 0;
+        width: 100%;
         color: white;
-        padding: 1rem;
+        padding: 0 1rem;
         text-align: center;
         background: rgba(0, 0, 0, .3);
+        box-sizing: border-box;
     }
 
     .thumb-date {
