--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -21,7 +21,27 @@ const { post }: { post: any } = Astro.props
     <body>
         <article>
             <h1>{post.title.rendered}</h1>
-            <div set:html={post.content.rendered}></div>
+            <div class="post-content" set:html={post.content.rendered}></div>
         </article>
     </body>
 </html>
+
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    h1 {
+        font-size: 2rem;
+        font-weight: 500;
+        text-transform: uppercase;
+        margin-bottom: 1rem;
+    }
+
+    :global(.post-content p) {
+        margin-bottom: 1rem;
+        font-size: .9rem;
+    }
+</style>
