[slug]: styled .post-content code

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -57,4 +57,14 @@ const { post }: { post: any } = Astro.props
         margin-bottom: 1rem;
         font-size: .9rem;
     }
+
+    :global(.post-content code) {
+        display: inline-block;
+        background: #F2F2F2;
+        padding: 1rem;
+        text-wrap: wrap;
+        word-wrap: break-word;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: .8rem;
+    }
 </style>
