[slug]: styled .post-content code

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -66,5 +66,7 @@ const { post }: { post: any } = Astro.props
         word-wrap: break-word;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: .8rem;
+        width: 90%;
+        line-height: 1.5;
     }
 </style>
