--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -119,16 +119,19 @@ const { post }: { post: any } = Astro.props
     }
 
     :global(figure) {
-        border: 2px solid red;
         width: 100%;
         margin-left: 0;
     }
 
     :global(.wp-block-image img) {
-        border: 2px solid orange;
         display: block;
         max-width: 100%;
         height: auto;
         object-fit: contain;
+    }
+
+    :global(.wp-block-list li) {
+        margin-bottom: .25rem;
+        font-size: .9rem;
     }
 </style>
