[slug]: styled .wp-block-gallery so that if there's an odd number of images/figures, the last one takes up the full width of the container

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -125,11 +125,18 @@ const { post }: { post: any } = Astro.props
 
     :global(.wp-block-gallery) {
         display: flex;
+        flex-wrap: wrap;
         gap: .5rem;
     }
 
     :global(.wp-block-gallery figure) {
         margin: 0;
+        flex: 0 0 calc(50% - .25rem);
+    }
+
+    :global(.wp-block-gallery figure:only-child,
+    .wp-block-gallery figure:nth-last-child(1):nth-child(odd)) {
+        flex: 0 0 100%;
     }
 
     :global(.wp-block-image img) {
