passing pageTitle from [slug] to PostLayout as props & rendering it

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -14,7 +14,7 @@ export async function getStaticPaths() {
 const { post }: { post: any } = Astro.props
 const pageTitle = post.title.rendered
 ---
-<PostLayout>
+<PostLayout pageTitle={pageTitle}>
     <article>
         <img class="featured-img" src={post.jetpack_featured_media_url} alt="">
         <div class="post-details">
