--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro"
+const { pageTitle } = Astro.props
 ---
 <html lang="en">
     <head>
@@ -7,15 +8,11 @@ import Header from "../components/Header.astro"
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
-        <!-- <title>{pageTitle}</title> -->
+        <title>{pageTitle}</title>
     </head>
+
     <body>
         <Header />
         <slot />
-        <!-- <h1>{pageTitle}</h1> -->
-        <!-- <Footer /> -->
-        <!-- <script>
-            import "../scripts/menu.js";
-        </script> -->
     </body>
 </html>
