added basic styling to Header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,24 @@
 ---
 ---
-<a href="/">Home</a>
+<nav>
+    <a href="/">Home</a>
+</nav>
 
 <style>
+    nav {
+        display: flex;
+        justify-content: end;
+    }
+
     a {
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
         padding: 0.5rem 1rem;
-        color: white;
-        background-color: #4c1d95;
+        color: gainsboro;
+        background-color: #AB1226;
         text-decoration: none;
+    }
+
+    a:hover {
+        color: white;
     }
 </style>
