moved styles out of index & about. put them into global.css & imported into pages

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css"
 ---
 
 <html lang="en">
@@ -27,28 +28,3 @@
 		</main>
 	</body>
 </html>
-
-<style>
-	* {
-		margin: 0;
-		padding: 0;
-		box-sizing: border-box;
-		font-family: Verdana, Geneva, Tahoma, sans-serif;
-	}
-
-	main {
-		margin: 1rem;
-	}
-
-	h1 {
-		margin-bottom: 1rem;
-		font-weight: 400;
-        font-size: 1.25rem;
-	}
-
-	p {
-        margin-bottom: 1rem;
-        font-size: .9rem;
-        width: 90%;
-    }
-</style>
