--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import PostsGallery from "../components/PostsGallery.astro"
+import "../styles/global.css"
 ---
 
 <html lang="en">
@@ -16,18 +17,3 @@ import PostsGallery from "../components/PostsGallery.astro"
 		<PostsGallery />
 	</body>
 </html>
-
-<style>
-	* {
-		margin: 0;
-		padding: 0;
-		box-sizing: border-box;
-		font-family: Verdana, Geneva, Tahoma, sans-serif;
-	}
-
-	h1 {
-		margin: 1rem;
-		font-weight: 400;
-        font-size: 1.25rem;
-	}
-</style>
