index renders in PageLayout. cleaned index up

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,9 @@
 ---
+import PageLayout from "../layouts/PageLayout.astro"
 import PostsGallery from "../components/PostsGallery.astro"
 import "../styles/global.css"
+const pageTitle = "Home - Astro / WordPress"
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro / WordPress</title>
-	</head>
-
-	<body>
-		<h1>Astro / WP Test</h1>
-		<PostsGallery />
-	</body>
-</html>
+<PageLayout pageTitle={pageTitle}>
+	<PostsGallery />
+</PageLayout>
