renamed /scripts/index.js to getPosts.js. updated [slug].astro import

--- a/src/components/PostsGallery.astro
+++ b/src/components/PostsGallery.astro
@@ -1,5 +1,5 @@
 ---
-import { getPosts } from "../scripts/index"
+import { getPosts } from "../scripts/getPosts"
 const posts = await getPosts()
 ---
 <section class="post-gallery">
