--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,23 +1,15 @@
 ---
 import PageLayout from "../layouts/PageLayout.astro"
 import "../styles/global.css"
+import { getPages } from "../scripts/getPages"
 const pageTitle = "About - Astro / WordPress"
+const pages = await getPages()
 ---
 
 <html lang="en">
 <PageLayout pageTitle={pageTitle}>
 	<main>
-		<h1>About</h1>
-
-		<p>[2019.01.26]</p>
-		<p>I haven't coded since the mid-1990s.</p>
-		<p>In 1985, when I was finishing 5th grade, my family got an Apple IIgs computer. After playing games on it (Ultima V was incredible) and writing school papers using Bank Street Writer Plus, I discovered AppleSoft BASIC and taught myself how to use it. We didn't have blank disks at the time, so I made text games from scratch, and they were lost to time every night, when we turned the computer off.</p>
-		<p>Later on, I mail-ordered a board called a PC Transporter, which was essentially a DOS emulator. We discovered the wide world of PC games, and PC-DOS. A few years later, we got an actual 286 computer and fully moved away from Apple and on to PC. It came with MS-DOS. I taught myself batch programming, largely because we needed to know it to properly play games back then.</p>
-
-		<p>In school, computers were introduced and I was able to leverage what I'd picked up from AppleSoft BASIC to learn Microsoft's version, and then move on to Pascal, which I really enjoyed. We upgraded to a 386, and even a 486, and I used Pascal during the mid 90s to write DOOR programs for an online BBS game called Legend of the Red Dragon, developed by a programmer named Seth Able. My expansions were never released publicly. I gave them life on a small BBS that I ran called The Black Spire, which was running Renegade BBS software. They were based on fairy tales.</p>
-		<p>In the late 1990s, I began a career in I/T, working for nursing homes, then Pepsi Corporation, back to nursing homes, and then on to an EMR company, first as a network administrator and then adding design to my responsibilities after our founder passed. I always enjoyed working with our programmers and database staff. I did most of our front-end design and logic, which they magically turned into code. Its something I wanted to do as well, but there was a lot of work to do and I stayed  in my lane.</p>
-
-		<p>Its now 2019. I'm married and have 2 kids. I don't want to regret missing out on pursuing interests that I pushed to the side for the past 20 years, so, spread across several blogs, I've picked back up my bass and started to learn how to play it, delved back into tabletop and online gaming - which I had long shelved in deference to work, and now I'm going to start learning to code again, with the hope of maybe even becoming a developer over time.</p>
-		<p>This blog is meant to help me share what I learn.</p>
+		<h1>{pages[2].title.rendered}</h1>
+		<div class="post-content" set:html={pages[2].content.rendered}></div>
 	</main>
 </PageLayout>
