--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,7 @@ p {
 .page-content {
     margin: 1rem auto;
     max-width: 800px;
+    padding: 0 1rem;
 }
 
 .page-content h1 {
@@ -34,4 +35,23 @@ p {
     width: 100%;
     height: auto;
     object-fit: cover;
+}
+
+.page-wp-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (min-width: 768px) {
+    p {
+        width: 80%;
+    }
+
+    .page-content img {
+        width: 115%;
+        margin-left: -7.5%;
+    }
 }
