updated post & page styles

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -16,3 +16,9 @@ const { pageTitle } = Astro.props
         <slot />
     </body>
 </html>
+
+<style>
+    body {
+        margin: 0;
+    }
+</style>
