--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,13 +9,16 @@
     nav {
         display: flex;
         justify-content: end;
+        background: black;
+        padding: .5rem;
     }
 
     a {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: 600;
         padding: 0.5rem 1rem;
-        color: gainsboro;
-        background-color: #AB1226;
+        color: #9a9fac;
+        /* background-color: #AB1226; */
         text-decoration: none;
     }
 
