--- a/src/components/PostsGallery.astro
+++ b/src/components/PostsGallery.astro
@@ -25,7 +25,7 @@ const posts = await getPosts()
         display: flex;
         flex-wrap: wrap;
         background: black;
-        margin-top: 1rem;
+        /* margin-top: 1rem; */
     }
 
     .post-thumb {
