--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,6 +7,8 @@
         <a href="/">Home</a>
         <a href="/about">About</a>
     </nav>
+
+    <div class="trigram">☰</div>
 </header>
 
 <style>
@@ -20,6 +22,11 @@
     }
     .nav {
         display: none;
+    }
+
+    .trigram {
+        font-size: 1.5rem;
+        cursor: pointer;
     }
 
     h1 {
@@ -44,6 +51,10 @@
             display: flex;
             justify-content: end;
             outline: 1px solid red;
+        }
+
+        .trigram {
+            display: none;
         }
     }
 </style>
