--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -39,22 +39,25 @@
     .trigram {
         font-size: 1.5rem;
         cursor: pointer;
+        user-select: none;
     }
 
     .burger-menu {
         position: absolute;
         right: 0;
-        background: black;
         z-index: 1;
-        outline: 1px solid yellow;
+        background: black;
+        list-style-type: none;
+        padding-bottom: 1rem;
+    }
+
+    .burger-menu li {
+        padding: .5rem 0;
+        user-select: none;
     }
 
     .hide {
         display: none;
-    }
-
-    h1 {
-        outline: 1px solid red;
     }
 
     a {
@@ -74,7 +77,6 @@
         .nav {
             display: flex;
             justify-content: end;
-            outline: 1px solid red;
         }
 
         .trigram {
