Header: cleaned up code

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -65,7 +65,6 @@
         font-weight: 600;
         padding: 0.5rem 1rem;
         color: #9a9fac;
-        /* background-color: #AB1226; */
         text-decoration: none;
     }
 
@@ -79,7 +78,7 @@
             justify-content: end;
         }
 
-        .trigram {
+        .trigram, .burger-menu {
             display: none;
         }
     }
