Header: made header stay at the top of the screen

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,6 +25,11 @@
 
 <style>
     header {
+        position: fixed;
+        top: 0;
+        z-index: 1;
+        height: 3.75rem;
+        width: 100%;
         display: flex;
         align-items: baseline;
         justify-content: space-between;
