--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro"
+import "../styles/global.css"
 const { pageTitle } = Astro.props
 ---
 <html lang="en">
@@ -18,7 +19,7 @@ const { pageTitle } = Astro.props
 </html>
 
 <style>
-    body {
-        margin: 0;
-    }
+    /* body {
+        margin: 3.75rem 0 0;
+    } */
 </style>
