--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,9 +27,10 @@
     header {
         position: fixed;
         top: 0;
+        left: 0;
+        right: 0;
         z-index: 1;
         height: 3.75rem;
-        width: 100%;
         display: flex;
         align-items: baseline;
         justify-content: space-between;
