Header: h1 links to home. made sure that hover effects on menu work

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 ---
 <header>
-    <h1>REDO FROM START</h1>
+    <a href="/"><h1>REDO FROM START</h1></a>
 
     <nav class="nav">
         <a href="/">Home</a>
@@ -38,6 +38,14 @@
         color: white;
         padding: .5rem;
     }
+
+    h1 {
+        color: white;
+    }
+    
+    a {
+        text-decoration: none;
+    }
     .nav {
         display: none;
     }
@@ -66,15 +74,13 @@
         display: none;
     }
 
-    a {
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    nav a, .burger-menu a {
         font-weight: 600;
         padding: 0.5rem 1rem;
         color: #9a9fac;
-        text-decoration: none;
     }
 
-    a:hover {
+    nav a:hover, .burger-menu a:hover {
         color: white;
     }
 
