--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro"
+import Footer from "../components/Footer.astro"
 import "../styles/global.css"
 const { pageTitle } = Astro.props
 ---
@@ -15,6 +16,7 @@ const { pageTitle } = Astro.props
     <body>
         <Header />
         <slot />
+        <Footer />
     </body>
 </html>
 
