getPosts: converting total posts & total pages to integers & sending them, along with posts, to PostsGallery

--- a/src/components/PostsGallery.astro
+++ b/src/components/PostsGallery.astro
@@ -1,6 +1,6 @@
 ---
 import { getPosts } from "../scripts/getPosts"
-const posts = await getPosts()
+const { posts, total, totalPages } = await getPosts()
 ---
 <section class="post-gallery">
     {posts.map((post: any) => (
